<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context="com.example.dell.nanodegree.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_main_page"
        android:id="@+id/nanodegree_text"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/margin_title" />

    <Button
        android:layout_width="@dimen/button_width_main"
        android:layout_height="wrap_content"
        android:text="@string/popular_movies"
        android:id="@+id/button_movie"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_marginTop="@dimen/button_text_margin" />

    <Button
        android:layout_width="@dimen/button_width_main"
        android:layout_height="wrap_content"
        android:text="@string/stock_hawk"
        android:id="@+id/button_stock"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_marginTop="@dimen/button_margin"/>
    <Button
        android:layout_width="@dimen/button_width_main"
        android:layout_height="wrap_content"
        android:text="@string/build_it_bigger"
        android:id="@+id/button_big"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_marginTop="@dimen/button_margin"/>

    <Button
        android:layout_width="@dimen/button_width_main"
        android:layout_height="wrap_content"
        android:text="@string/make_your_app_material"
        android:id="@+id/button_material"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_marginTop="@dimen/button_margin" />
    <Button
        android:layout_width="@dimen/button_width_main"
        android:layout_height="wrap_content"
        android:text="@string/go_ubiquitous"
        android:id="@+id/button_ubiquitous"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_marginTop="@dimen/button_margin"/>

    <Button
        android:layout_width="@dimen/button_width_main"
        android:layout_height="wrap_content"
        android:text="@string/capstone"
        android:id="@+id/button_capstone"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_marginTop="@dimen/button_margin"/>

</LinearLayout>

