<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.dell.nanodegree.MovieDetails">

        <ImageView
            android:id="@+id/detail_poster_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/demo" />

        <TextView
            android:id="@+id/detail_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/detail_poster_image"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_toEndOf="@+id/detail_poster_image"
            android:text="@string/release_date"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/detail_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/detail_date"
            android:layout_below="@+id/detail_date"
            android:layout_marginTop="@dimen/text_margin_large"
            android:text="@string/rating"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/red" />

        <TextView
            android:id="@+id/detail_votes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/detail_rating"
            android:layout_below="@+id/detail_rating"
            android:layout_marginTop="@dimen/text_margin_small"
            android:text="@string/votes"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/black"
            android:textSize="@dimen/textsize_default" />

        <TextView
            android:id="@+id/detail_synopsis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/detail_poster_image"
            android:singleLine="false"
            android:text="@string/overview"
            android:layout_marginTop="@dimen/text_margin_med"
            android:textColor="@color/red"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textsize_default"
            android:text="Medium Text"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/text_margin_small"
            android:id="@+id/detail_overview"
            android:layout_below="@+id/detail_synopsis"
            android:layout_alignParentStart="true" />

    </RelativeLayout>
</ScrollView>